[package]
name = "vulkanmand"
version = "0.1.0"
authors = ["Dr. David Alan Gilbert <dave@treblig.org>"]

[dependencies]
glib = { version = "0.5.0" }
x11-dl = { version = "2.18.0" }
gdk = { version = "0.8.0" }
gdk-sys = { version = "0.6.0" }
cairo-rs = { version = "0.4.0", features = ["png"] }
gtk = { version = "0.4.1", features = ["v3_16"] }
nalgebra = { version = "0.14.2" }
bincode = { version = "1.0.0" }
vulkano  = { version = "0.11.0" }

#[patch.crates-io]
#vulkano  = { path ='/discs/more/git/vulkano/vulkano' } 
