[package]
name = "vulkanmand"
version = "0.1.0"
authors = ["Dr. David Alan Gilbert <dave@treblig.org>"]

[dependencies]
glib = { version = "0.6.0" }
x11-dl = { version = "2.18.0" }
gdk = { version = "0.9.0" }
gdk-sys = { version = "0.7.0" }
gtk = { version = "0.5.0", features = ["v3_16"] }
nalgebra = { version = "0.16.11" }
bincode = { version = "1.0.0" }
vulkano  = { version = "0.11.1" }

#[patch.crates-io]
#vulkano  = { path ='/discs/more/git/vulkano/vulkano' } 
