[package]
name = "vulkanmand"
version = "0.1.0"
authors = ["Dr. David Alan Gilbert <dave@treblig.org>"]
edition = "2018"

[dependencies]
glib = { version = "0.6.0" }
x11-dl = { version = "2.18.0" }
gdk = { version = "0.9.0" }
gdk-sys = { version = "0.7.0" }
gobject-sys = { }
gtk = { version = "0.5.0", features = ["v3_16"] }
na = { version = "0.16.11", package = "nalgebra" }
bincode = { version = "1.0.0" }
vulkano  = { version = "0.11.1" }
wayland-client = { version = "0.21.7", features = ["native_lib"]  }

#[patch.crates-io]
#vulkano  = { path ='/discs/more/git/vulkano/vulkano' } 
